@@ -53,6 +53,9 @@
      [channels.c]
      don't delete the auth socket in channel_stop_listening()
      auth_sock_cleanup_proc() will take care of this.
+   - markus@cvs.openbsd.org 2001/06/05 16:46:19
+     [session.c]
+     let session_close() delete the pty.  deny x11fwd if xauthfile is set.
 
 20010606
  - OpenBSD CVS Sync
@@ -5564,4 +5567,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1262 2001/06/09 01:32:29 mouring Exp $
+$Id: ChangeLog,v 1.1263 2001/06/09 01:34:15 mouring Exp $
